...
    IconButton(onClick = onPostponements, modifier = Modifier.testTag("home-postponements")) {
        Icon(
            painterResource(R.drawable.schedule_24),
            contentDescription = stringResource(R.string.postponements),
        )
    }
    IconButton(onClick = onSettings, modifier = Modifier.testTag("home-settings")) {
        Icon(painterResource(R.drawable.settings_24), contentDescription = stringResource(R.string.settings))
    }
    IconButton(onClick = onProfile, modifier = Modifier.testTag("home-profile")) {
        Icon(painterResource(R.drawable.person_24), contentDescription = stringResource(R.string.profile))
    }
}

