...
    <string name="relation_other">Other</string>
    <string name="relation_source">Source</string>
    <string name="relation_compilation">Compilation</string>
    <string name="relation_contains">Contains</string>
    <string name="relation_same_universe">Same universe</string>
    <string name="recommendations">Recommendations</string>
    <string name="settings">Settings</string>
    <string name="display">Display</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="theme_system">Follow system</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
...
